--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -1,14 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Exercise 2</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Exercise 2</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
+  <body>
+    <div class="wrapper">
+      <div class="grid">
+        <div class="box box-1">
+          <div class="box1-wrapper"></div>
+          <div>
+            <img class="photo" alt="cv card photo" src="exercise-2.png" />
+          </div>
+          <div class="box1-headers">
+            <div>
+              <h1>Card Title aligns left</h1>
+            </div>
+            <div>
+              <h2>SUBTITLE ALIGNS UNDERNEATH</h2>
+            </div>
+          </div>
+          <div class="text">
+            <p>
+              There is a normal amount of text here, and there is even spacing
+              around all sides.
+            </p>
+          </div>
+        </div>
+      
 
-<body>
-</body>
+      <div class="box box-1">
+        <div class="box1-wrapper"></div>
+        <div>
+          <img class="photo" alt="cv card photo" src="exercise-2.png" />
+        </div>
+        <div class="box1-headers">
+          <div>
+            <h1>Card Title aligns left</h1>
+          </div>
+          <div>
+            <h2>SUBTITLE ALIGNS UNDERNEATH</h2>
+          </div>
+        </div>
+        <div class="text">
+          <p>
+            There is a normal amount of text here, and there is even spacing
+            around all sides.
+          </p>
+        </div>
+      </div>
 
+      <div class="box box-1">
+        <div class="box1-wrapper"></div>
+        <div>
+          <img class="photo" alt="cv card photo" src="exercise-2.png" />
+        </div>
+        <div class="box1-headers">
+          <div>
+            <h1>Card Title aligns left</h1>
+          </div>
+          <div>
+            <h2>SUBTITLE ALIGNS UNDERNEATH</h2>
+          </div>
+        </div>
+        <div class="text">
+          <p>
+            There is a normal amount of text here, and there is even spacing
+            around all sides.
+          </p>
+        </div>
+      </div>
+     </div>
+    </div>
+
+  </body>
 </html>
