--- a/exercise-3/index.html
+++ b/exercise-3/index.html
@@ -9,6 +9,35 @@
 </head>
 
 <body>
+  <div class="slidershow middle">
+
+    <div class="slides">
+      <input type="radio" name="r" id="r1" checked>
+      <input type="radio" name="r" id="r2">
+      <input type="radio" name="r" id="r3">
+      <input type="radio" name="r" id="r4">
+      <div class="slide s1">
+        <img src="NicolasCage1.jpeg" alt="">
+      </div>
+      <div class="slide">
+        <img src="NicolasCage2.jpeg" alt="">
+      </div>
+      <div class="slide">
+        <img src="NicolasCage3.jpeg" alt="">
+      </div>
+      <div class="slide">
+        <img src="NicolasCage4.jpeg" alt="">
+      </div>
+    </div>
+
+    <div class="navigation">
+      <label for="r1" class="bar"></label>
+      <label for="r2" class="bar"></label>
+      <label for="r3" class="bar"></label>
+      <label for="r4" class="bar"></label>
+    </div>
+  </div>
+    
 </body>
 
 </html>
